updated stats page

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -33,3 +33,9 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 body {
 	background-color: lightgrey;
 }
+
+.trip-teaser {
+	padding: 5px;
+	border: 1px solid #ccc;
+	margin-bottom: 1em;
+}
